--- a/app/components/note/noteInput.module.css
+++ b/app/components/note/noteInput.module.css
@@ -1,20 +1,75 @@
-.form {
-  padding: 1rem;
-  background-color: lightgreen;
+.container {
+    background-color: lightgreen;
+    color: rgb(27, 27, 27);
 }
 
-.form label,
-.form div {
-  display: block;
-  margin: 1rem;
+.formContainer {
+    /* Padding should be changed based on window's width */
+    /* Would be best to create a variable and change it accordingly */
+    max-width: var(--max-width);
+    padding: 40px;
+    margin: 0 auto;
 }
 
-.form label > textarea {
-  display: block;
-  width: 100%;
+.formContainer > h3 {
+    font-size: 24px;
+    margin-bottom: 24px;
 }
 
-.required::before {
-  content: "*";
-  color: red;
+.inputContainer {
+    border-radius: 4px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.inputContainer > label {
+    font-size: 12px;
+    font-weight: bold;
+    letter-spacing: 0.02rem;
+    text-transform: uppercase;
+    margin-bottom: 8px;
+    user-select: none;
+}
+
+.inputContainer > input {
+    height: 40px;
+    border-radius: 4px;
+    border: none;
+    max-width: 480px;
+    padding: 10px;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.inputContainer > input:focus {
+    outline: 3px solid lightblue;
+}
+
+.inputContainer > textarea {
+    height: 80px;
+    border-radius: 4px;
+    border: none;
+    min-width: clamp(100px, 100%, 480px);
+    max-width: 100%;
+    min-height: 80px;
+    max-height: 800px;
+    padding: 10px;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.inputContainer > textarea:focus {
+    outline: 3px solid lightblue;
+}
+
+.required::after {
+    content: '*';
+    color: red;
+    margin-left: 4px;
+}
+
+.warn {
+    margin-top: 5px;
+    color: lightsalmon;
 }
