--- a/app/components/source/sourceDisplay.module.css
+++ b/app/components/source/sourceDisplay.module.css
@@ -1,19 +1,63 @@
+.container {
+    background-color: lightblue;
+    color: black;
+}
+
+.formContainer {
+    /* Padding should be changed based on window's width */
+    /* Would be best to create a variable and change it accordingly */
+    max-width: var(--max-width);
+    padding: 40px;
+    margin: 0 auto;
+}
+
+.formContainer > h3 {
+    font-size: 24px;
+    margin-bottom: 24px;
+}
+
+.sourceGrid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 1rem;
+}
+
 .source {
     border: 1px solid black;
-    border-radius: 0.2rem;
+    border-radius: 4px;
     background-color: skyblue;
-    padding: 0.5rem;
+    padding: 16px;
+    height: fit-content;
 }
 
 .source h4 {
-    text-align: center;
+    margin-bottom: 10px;
 }
 
 .contributors {
     background-color: black;
     color: white;
-    padding: 0 0.2rem;
+    padding: 10px;
+    border-radius: 4px;
 }
+
+.contributors > ol {
+    list-style: none;
+}
+
 .contributors::first-line {
     font-style: italic;
+}
+
+.source > a {
+    display: block;
+    padding: 6px 12px;
+    margin-top: 20px;
+    border-radius: 4px;
+    background-color: darkcyan;
+    width: fit-content;
+}
+
+.source > a:hover {
+    background-color: darkslategray;
 }
